Set style and big icon for both notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NotifcationExamples</string>
+    <string name="long_text">"Sam pomyśl: tyle pieniędzy i lat życia, ile zechcesz! Dwie rzeczy, których ludzkie istoty pragną najbardziej… Tylko że ludzie mają wrodzony talent do wybierania właśnie tego, co dla nich najgorsze. Harry Potter i Kamień Filozoficzny ☕️ 😍 "</string>
 </resources>
